Fix download menu's visiblity on user pages

--- a/src/data/formats/permanent.css
+++ b/src/data/formats/permanent.css
@@ -6,6 +6,7 @@
   z-index: 2147483647;
   color: #FFF!important;
   -moz-user-select: none;
+  overflow: hidden;
 }
 #iaextractor-menu a {
   color: #FFF!important;
@@ -110,17 +111,16 @@
   padding-left: 37px!important;
   transition: background-color 100ms!important;
 }
-.iaextractor-item span:not(.iaextractor-dropdown):hover {
-  background-color: #FFA05A!important;
-}
-.iaextractor-item span:not(.iaextractor-dropdown):hover:active {
-  background-color: #FF8830!important;
-}
+.iaextractor-item span:not(.iaextractor-dropdown):hover,
 .iaextractor-dropdown:hover {
   background-color: #FFA05A!important;
 }
+.iaextractor-item span:not(.iaextractor-dropdown):hover:active,
+.iaextractor-dropdown:hover:active {
+  background-color: #FF8330!important;
+}
 .iaextractor-item[selected] .iaextractor-dropdown {
-  background-color: #FF8830!important;
+  background-color: #FF8330!important;
 }
 
 /** Downloader **/
@@ -130,7 +130,7 @@
   z-index: 2147483647;
   position: absolute; 
   color: #FFF!important;
-  background-color: #FF8830!important;
+  background-color: #FF8330!important;
   -moz-user-select: none;
 }
 #iaextractor-downloader li {
